<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/orange_pattern" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="46dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:textAlignment="center"
                android:scaleX="0.65"
                android:scaleY="0.65"
                app:srcCompat="@drawable/shipper_avatar" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginTop="-22dp"
                android:text="Tùng Lâm" />

            <TextView
                android:id="@+id/textViewRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:text="@string/user_customer" />

        </LinearLayout>

    </FrameLayout>

    <TableLayout
        android:stretchColumns="*"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:layout_weight="1">
            <android.support.v7.widget.CardView
                android:id="@+id/cardViewReadList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="-10dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_assignment_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_order"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardViewAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="-10dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_account"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </TableRow>
        <TableRow android:layout_weight="1">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="-10dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_settings_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_setting"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </TableRow>
    </TableLayout>
</LinearLayout>